# earlyexitnet

./: .gitignore  README.md  cli.py  env.yaml  experiments.sh  gpu_env.yml  main.py  pt1_8_env.yaml  pyproject.toml  req.txt  requirements.txt  test_onnx.py  tools.py
data/: threshold_range.txt
model-outputs/: 0.3-0.95.json  mnist_b_lenet_se_0-0.95-4bit.json  threshold_range.json
models/: Branchynet.py  Testnet.py  resnetv1Xhapi.py
scripts/: experiments.sh  resnet8_train_withGPU.sh  resnet8_train_withGPU_cosine.sh  resnet8_train_withGPU_sgd.sh  test.sh  test_single_ex.sh  train.sh
scripts/jupyter/: cifar_b_lenet_visual_testing.ipynb  data_analysis.ipynb  make_MAV.ipynb  softmax_distrib_comparison.ipynb
scripts/py/: data_gen_4pgf.py
src/: cifar_b_lenet_visual_testing.ipynb  make_MAV.ipynb  softmax_comparison.py  softmax_distrib_comparison.ipynb  test.sh  test_multiple_thresh.sh  train.sh
src/data-analysis/: cifar_b_lenet_visual_testing.ipynb  data_analysis.ipynb  softmax_comparison.py  softmax_distrib_comparison.ipynb
src/earlyexitnet/: cli.py  tools.py
src/earlyexitnet/data_analysis/: graphs.py  softmax_comparison.py
src/earlyexitnet/models/: Branchynet.py  Lenet.py  ResNet8.py  Testnet.py
src/earlyexitnet/onnx_tools/: onnx_helpers.py  test_onnx.py
src/earlyexitnet/testing_tools/: hw_sim.py  quick_softmax.py  results.txt  test.py
src/earlyexitnet/training_tools/: configs.py  train.py
src/helper/: graphs.py
src/trained_models/: notes.txt
trained_models/: b_lenet_cifar10.pth  b_lenet_se.pth  resnet8_2ee_230721.pth  resnet8_2ee_230721_jnt-frm-scrtch.pth  resnet8_2ee_230721b.pth  resnet8_bb_t1acc88.pth
