[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "Early_Exit_Networks"
version = "0.0.1"
authors = [
    { name="Ben Biggs", email="bb2515@ic.ac.uk" }
]
description="A package for training, testing, and exploring early-exit networks in Pytorch & beyond"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "onnx>=1.8.1, <2.0.0",
    "protobuf==3.20",
    "onnxruntime==1.12.0",
    "onnxoptimizer==0.2.7",
    "torch==1.13.1",
    "torchvision>=0.8.2",
    "onnx-simplifier>=0.3.5",
    "numpy>=1.26.4, <2.0.0",
    "scipy>=1.2.1",
    "scikit-learn>=1.6.0, <2.0.0",
    "matplotlib>=3.10",
    "fxpmath",
    "tqdm",
    "pylint",
    "black",
    "jupyter==1.1.1"
]

[project.optional-dependencies]
dev = ["pytest==5.0.0", "pytest-cov[all]", "mypy==0.910", "black==21.10b0"]

[project.urls]
Homepage = "https://github.com/biggsbenjamin/earlyexitnet"
repository = "https://github.com/biggsbenjamin/earlyexitnet"

# linters
[tool.black]
target-version = ['py310']
line-length = 90
