[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "Early_Exit_Networks"
version = "0.0.1"
authors = [
    { name="Ben Biggs", email="bb2515@ic.ac.uk" }
]
description="A package for training, testing, and exploring early-exit networks in Pytorch & beyond"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "onnx",
    "protobuf",
    "onnxruntime",
    "onnxoptimizer",
    "torch",
    "torchvision>=0.8.2",
    "onnxsim",
    "numpy",
    "scipy",
    "scikit-learn",
    "fxpmath",
    "tqdm",
    "pylint>=3.3.3",
    "mypy>=1.14.1",
    "black",
    "matplotlib>=3.10",
    "pandas==2.2.3"
]

[project.optional-dependencies]
dev = ["pytest==5.0.0", "pytest-cov[all]", "mypy==0.910", "black==21.10b0"]

[project.urls]
Homepage = "https://github.com/biggsbenjamin/earlyexitnet"
repository = "https://github.com/biggsbenjamin/earlyexitnet"

# linters
[tool.pylint]
disable = [
    "no-member", # get rid of dynamic typing issues from torch
    "invalid-name" # I like my funky var names
]
max-line-length = 90

[tool.mypy]
follow_untyped_imports = true
